<resources>
    <string name="app_name">Foodversy</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="menu_categories">Categories</string>
    <string name="food_list_fragment">Food List</string>
    <string name="name_of_food">Name of Food</string>
    <string name="food_details_fragment">Food List</string>
    <string name="food_name">Food Name</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="add_on">Addon</string>
    <string name="menu_cart">Cart</string>
    <string name="empty_cart">EMPTY CART</string>
    <string name="dummy_total">Total: 0,0</string>
    <string name="delete">Delete</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_your_address">Enter Your address</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="enter_comment">Enter Comment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_view_order">Orders Placed</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="tracking_order">Tracking Order</string>
    <string name="title_activity_tracking_order">Map</string>
</resources>