<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.communisolve.foodversy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.communisolve.foodversy.ui.menu.MenuFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.communisolve.foodversy.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_foodListFragment"
        android:name="com.communisolve.foodversy.ui.foodlist.FoodListFragment"
        android:label="@string/food_list_fragment"
        tools:layout="@layout/food_list_fragment" />
    <fragment
        android:id="@+id/nav_foodDetailsFragment"
        android:name="com.communisolve.foodversy.ui.fooddetail.FoodDetailsFragment"
        android:label="@string/food_details_fragment"
        tools:layout="@layout/food_details_fragment" />
</navigation>