<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
    </group>

    <group android:id="@+id/cateogry_group">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu_categories" />
    </group>

    <group android:id="@+id/cart_group">

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart" />
    </group>
    <group android:id="@+id/user_group">

        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/sign_out" />
    </group>

</menu>